[SL-16 CHORE] interview 필터링 쿼리 파라미터 추가